--- a/PragimCourses/PragimCourses/PragimCourses.csproj
+++ b/PragimCourses/PragimCourses/PragimCourses.csproj
@@ -46,6 +46,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -198,18 +204,15 @@
     <Compile Include="Configuration\CategoryConfiguration.cs" />
     <Compile Include="Configuration\CourseConfiguration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202003041829421_initial.cs" />
-    <Compile Include="Migrations\202003041829421_initial.Designer.cs">
-      <DependentUpon>202003041829421_initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202003041905479_UpdateCourse.cs" />
-    <Compile Include="Migrations\202003041905479_UpdateCourse.Designer.cs">
-      <DependentUpon>202003041905479_UpdateCourse.cs</DependentUpon>
+    <Compile Include="Migrations\202003051440292_initial.cs" />
+    <Compile Include="Migrations\202003051440292_initial.Designer.cs">
+      <DependentUpon>202003051440292_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -220,6 +223,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CourseViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -234,7 +238,45 @@
     <Content Include="Content\Images\border_bottom.png" />
     <Content Include="Content\Images\border_bottom_white.png" />
     <Content Include="Content\Images\c.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\angularjs8-360x270.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\blueprism-360x270.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\dba-360x270.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\devops-aws.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\hadoop-360x270.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\ibm-mq-360x270.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\informatica.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\java-j2ee.png" />
+    <Content Include="Content\Images\ClassRoomCourses\msbi.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\mvc.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\plsql-360x270.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\power-bi.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\Salesforce.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\tableau.jpg" />
+    <Content Include="Content\Images\ClassRoomCourses\ui-dev.jpg" />
     <Content Include="Content\Images\devops-aws.jpg" />
+    <Content Include="Content\Images\DownloadCourses\ado-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\angular-cli-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\angularjs-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\angularjs2-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\asp-mvc-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\ASP.NET-GridView-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\ASP.NET-Web-api-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\aspnet-360x270 %281%29.png" />
+    <Content Include="Content\Images\DownloadCourses\aspnet-360x270.png" />
+    <Content Include="Content\Images\DownloadCourses\bootstrap-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\csharp-net-360x270.png" />
+    <Content Include="Content\Images\DownloadCourses\DesignPatternsCSharp-360x270.png" />
+    <Content Include="Content\Images\DownloadCourses\download-360x270.jpeg" />
+    <Content Include="Content\Images\DownloadCourses\downloads-1-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\Entity-Framework-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\java-script-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\jquery-1-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\LinqToSql-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\MSSQLServer-360x270.png" />
+    <Content Include="Content\Images\DownloadCourses\slides-360x270.jpg" />
+    <Content Include="Content\Images\DownloadCourses\solid-principles-object-oriented-design-360x270.png" />
+    <Content Include="Content\Images\DownloadCourses\wcfimage-360x270.png" />
+    <Content Include="Content\Images\DownloadCourses\webs-services-360x270.jpg" />
     <Content Include="Content\Images\FreeCourses\ado-net-360x270.jpg" />
     <Content Include="Content\Images\FreeCourses\angularjs.jpg" />
     <Content Include="Content\Images\FreeCourses\angular2-360x270.jpg" />
@@ -263,6 +305,7 @@
     <Content Include="Content\Images\pargim-logo-1.png" />
     <Content Include="Content\Images\paython.jpg" />
     <Content Include="Content\Images\ui-dev.jpg" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -321,9 +364,11 @@
     <Content Include="Views\Home\Subscribe.cshtml" />
     <Content Include="Views\Home\Feedback.cshtml" />
     <Content Include="Views\Home\Testimonial.cshtml" />
-    <Content Include="Views\Home\FreeCourses.cshtml" />
-    <Content Include="Views\Home\DownloadCourses.cshtml" />
-    <Content Include="Views\Home\ClassRoomCourses.cshtml" />
+    <Content Include="Views\Courses\FreeCourses.cshtml" />
+    <Content Include="Views\Courses\Create.cshtml" />
+    <Content Include="Views\Courses\ClassRoomCourses.cshtml" />
+    <Content Include="Views\Courses\DownloadCourses.cshtml" />
+    <Content Include="Views\Shared\_signup_news.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -342,11 +387,8 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202003041829421_initial.resx">
-      <DependentUpon>202003041829421_initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202003041905479_UpdateCourse.resx">
-      <DependentUpon>202003041905479_UpdateCourse.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202003051440292_initial.resx">
+      <DependentUpon>202003051440292_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
