--- a/PragimCourses/PragimCourses/PragimCourses.csproj
+++ b/PragimCourses/PragimCourses/PragimCourses.csproj
@@ -217,9 +217,11 @@
     <Compile Include="Configuration\CourseDetailsBodyConfiguration.cs" />
     <Compile Include="Configuration\CourseDetailsHeaderConfiguration.cs" />
     <Compile Include="Configuration\FeedbackConfiguration.cs" />
+    <Compile Include="Configuration\ReviewConfiguration.cs" />
     <Compile Include="Configuration\UserConfiguration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\CourseController.cs" />
+    <Compile Include="Controllers\Api\CourseController.cs" />
+    <Compile Include="Controllers\Api\ReviewController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -246,6 +248,14 @@
     <Compile Include="Migrations\202003211211573_CourseDetailsTables.Designer.cs">
       <DependentUpon>202003211211573_CourseDetailsTables.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003241552361_AddReviewTable.cs" />
+    <Compile Include="Migrations\202003241552361_AddReviewTable.Designer.cs">
+      <DependentUpon>202003241552361_AddReviewTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003241737490_AddReviewNavigationProperty.cs" />
+    <Compile Include="Migrations\202003241737490_AddReviewNavigationProperty.Designer.cs">
+      <DependentUpon>202003241737490_AddReviewNavigationProperty.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -258,6 +268,7 @@
     <Compile Include="Models\Feedback.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Review.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ContactViewModel.cs" />
@@ -447,6 +458,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202003211211573_CourseDetailsTables.resx">
       <DependentUpon>202003211211573_CourseDetailsTables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003241552361_AddReviewTable.resx">
+      <DependentUpon>202003241552361_AddReviewTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003241737490_AddReviewNavigationProperty.resx">
+      <DependentUpon>202003241737490_AddReviewNavigationProperty.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
