--- a/PragimCourses/PragimCourses/PragimCourses.csproj
+++ b/PragimCourses/PragimCourses/PragimCourses.csproj
@@ -265,6 +265,7 @@
     <Compile Include="Models\CourseCategory.cs" />
     <Compile Include="Models\CourseDetailsBody.cs" />
     <Compile Include="Models\CourseDetailsHeader.cs" />
+    <Compile Include="Models\CourseType.cs" />
     <Compile Include="Models\Feedback.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -284,6 +285,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\font-awesome.css" />
+    <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\Images\angularjs8-360x270.jpg" />
     <Content Include="Content\Images\banner-1.jpg" />
     <Content Include="Content\Images\banner-2.jpg" />
@@ -361,6 +364,7 @@
     <Content Include="Content\Images\ui-dev.jpg" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -369,6 +373,11 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="fonts\fontawesome-webfont.woff2" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -424,8 +433,10 @@
     <Content Include="Views\Courses\DownloadCourses.cshtml" />
     <Content Include="Views\Shared\_signup_news.cshtml" />
     <Content Include="Views\Shared\_testimonial.cshtml" />
-    <Content Include="Views\Courses\AddClassRoomCourseDescription.cshtml" />
+    <Content Include="Views\Courses\AddCourseDescription.cshtml" />
     <Content Include="Views\Courses\Details.cshtml" />
+    <Content Include="Views\Shared\_freeCourses.cshtml" />
+    <Content Include="Views\Shared\_classRoomCourses.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
