--- a/PragimCourses/PragimCourses/PragimCourses.csproj
+++ b/PragimCourses/PragimCourses/PragimCourses.csproj
@@ -210,6 +210,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Configuration\BillingInfoConfiguration.cs" />
     <Compile Include="Configuration\CategoryCourseConfiguration.cs" />
     <Compile Include="Configuration\CategoryConfiguration.cs" />
     <Compile Include="Configuration\ContactConfiguration.cs" />
@@ -218,12 +219,16 @@
     <Compile Include="Configuration\CourseDetailsHeaderConfiguration.cs" />
     <Compile Include="Configuration\FeedbackConfiguration.cs" />
     <Compile Include="Configuration\ReviewConfiguration.cs" />
+    <Compile Include="Configuration\ShippingInfoConfiguration.cs" />
     <Compile Include="Configuration\SubscriberConfiguration.cs" />
     <Compile Include="Configuration\UserConfiguration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Api\AuthonticateController.cs" />
+    <Compile Include="Controllers\Api\CheckoutController.cs" />
     <Compile Include="Controllers\Api\CourseController.cs" />
     <Compile Include="Controllers\Api\ReviewController.cs" />
     <Compile Include="Controllers\Api\Subscriber.cs" />
+    <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -262,9 +267,26 @@
     <Compile Include="Migrations\202003291500155_addSubscriberTable.Designer.cs">
       <DependentUpon>202003291500155_addSubscriberTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003311714143_addingBillingInfoShippingInfoTables.cs" />
+    <Compile Include="Migrations\202003311714143_addingBillingInfoShippingInfoTables.Designer.cs">
+      <DependentUpon>202003311714143_addingBillingInfoShippingInfoTables.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004041316348_correctErrorInUsersTable.cs" />
+    <Compile Include="Migrations\202004041316348_correctErrorInUsersTable.Designer.cs">
+      <DependentUpon>202004041316348_correctErrorInUsersTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004041440177_updateZipCodeType.cs" />
+    <Compile Include="Migrations\202004041440177_updateZipCodeType.Designer.cs">
+      <DependentUpon>202004041440177_updateZipCodeType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202005051313095_SeedingData.cs" />
+    <Compile Include="Migrations\202005051313095_SeedingData.Designer.cs">
+      <DependentUpon>202005051313095_SeedingData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\BillingInfo.cs" />
     <Compile Include="Models\Contact.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Category.cs" />
@@ -276,9 +298,11 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Review.cs" />
+    <Compile Include="Models\ShippingInfo.cs" />
     <Compile Include="Models\Subscriber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CartViewModel.cs" />
     <Compile Include="ViewModels\ContactViewModel.cs" />
     <Compile Include="ViewModels\CourseDescriptionViewModel.cs" />
     <Compile Include="ViewModels\CourseDetailsBodyViewModel.cs" />
@@ -385,6 +409,7 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -444,6 +469,11 @@
     <Content Include="Views\Courses\Details.cshtml" />
     <Content Include="Views\Shared\_freeCourses.cshtml" />
     <Content Include="Views\Shared\_classRoomCourses.cshtml" />
+    <Content Include="Views\Cart\Index.cshtml" />
+    <Content Include="Views\Cart\Checkout.cshtml" />
+    <Content Include="Views\Shared\_contactInfo.cshtml" />
+    <Content Include="Views\Shared\_billing.cshtml" />
+    <Content Include="Views\Shared\_shipping .cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -485,6 +515,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202003291500155_addSubscriberTable.resx">
       <DependentUpon>202003291500155_addSubscriberTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003311714143_addingBillingInfoShippingInfoTables.resx">
+      <DependentUpon>202003311714143_addingBillingInfoShippingInfoTables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004041316348_correctErrorInUsersTable.resx">
+      <DependentUpon>202004041316348_correctErrorInUsersTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004041440177_updateZipCodeType.resx">
+      <DependentUpon>202004041440177_updateZipCodeType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005051313095_SeedingData.resx">
+      <DependentUpon>202005051313095_SeedingData.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
