--- a/PragimCourses/PragimCourses/Web.config
+++ b/PragimCourses/PragimCourses/Web.config
@@ -19,7 +19,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <trace enabled="true" localOnly="true"/>
+    <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
