order and some refactor for rating

--- a/PragimCourses/PragimCourses/PragimCourses.csproj
+++ b/PragimCourses/PragimCourses/PragimCourses.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Configuration\CourseDetailsHeaderConfiguration.cs" />
     <Compile Include="Configuration\EnrollmentConfiguration.cs" />
     <Compile Include="Configuration\FeedbackConfiguration.cs" />
+    <Compile Include="Configuration\OrderConfiguration.cs" />
     <Compile Include="Configuration\ReviewConfiguration.cs" />
     <Compile Include="Configuration\ShippingInfoConfiguration.cs" />
     <Compile Include="Configuration\SubscriberConfiguration.cs" />
@@ -228,6 +229,7 @@
     <Compile Include="Controllers\Api\CheckoutController.cs" />
     <Compile Include="Controllers\Api\CourseController.cs" />
     <Compile Include="Controllers\Api\EnrollmentController.cs" />
+    <Compile Include="Controllers\Api\OrderController.cs" />
     <Compile Include="Controllers\Api\ReviewController.cs" />
     <Compile Include="Controllers\Api\Subscriber.cs" />
     <Compile Include="Controllers\CartController.cs" />
@@ -293,6 +295,10 @@
     <Compile Include="Migrations\202006261439146_addEnrollmentTable.Designer.cs">
       <DependentUpon>202006261439146_addEnrollmentTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006271842129_addingOrderTable.cs" />
+    <Compile Include="Migrations\202006271842129_addingOrderTable.Designer.cs">
+      <DependentUpon>202006271842129_addingOrderTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -308,6 +314,7 @@
     <Compile Include="Models\Feedback.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Review.cs" />
     <Compile Include="Models\ShippingInfo.cs" />
     <Compile Include="Models\Subscriber.cs" />
@@ -318,6 +325,7 @@
     <Compile Include="ViewModels\CourseDescriptionViewModel.cs" />
     <Compile Include="ViewModels\CourseDetailsBodyViewModel.cs" />
     <Compile Include="ViewModels\CourseDetailsHeaderViewModel.cs" />
+    <Compile Include="ViewModels\CourseRatingViewModel.cs" />
     <Compile Include="ViewModels\CoursesFeedbackViewModel.cs" />
     <Compile Include="ViewModels\CourseViewModel.cs" />
     <Compile Include="ViewModels\FeedbackViewModel.cs" />
@@ -552,6 +560,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202006261439146_addEnrollmentTable.resx">
       <DependentUpon>202006261439146_addEnrollmentTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006271842129_addingOrderTable.resx">
+      <DependentUpon>202006271842129_addingOrderTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
